crates/swc_ecma_parser/tests/test262-error-references/fail/a7571e2f3c5d075c.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/a7571e2f3c5d075c.js:1:5
  |
1 | var if = 42
  |     ^^

